infra/k8s/overlays/dev/haproxy-deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
spec:
  template:
    spec:
      containers:
        - name: haproxy
          volumeMounts:
            - name: cfg
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
